# Nextube-Remaster

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults  version.json
.github/workflows/: build.yml
components/audio/: CMakeLists.txt  audio.c
components/audio/include/: audio.h
components/config_mgr/: CMakeLists.txt  config_mgr.c
components/config_mgr/include/: config_mgr.h
components/display/: CMakeLists.txt  display.c  idf_component.yml
components/display/include/: display.h
components/leds/: CMakeLists.txt  leds.c
components/leds/include/: leds.h
components/ntp_time/: CMakeLists.txt  ntp_time.c
components/ntp_time/include/: ntp_time.h
components/rtc/: CMakeLists.txt  rtc_pcf8563.c
components/rtc/include/: rtc_pcf8563.h
components/sht30/: CMakeLists.txt  sht30.c
components/sht30/include/: sht30.h
components/touch/: CMakeLists.txt  touch_input.c
components/touch/include/: touch_input.h
components/weather/: CMakeLists.txt  weather.c
components/weather/include/: weather.h
components/web_server/: CMakeLists.txt  web_server.c
components/web_server/include/: web_server.h
components/wifi_manager/: CMakeLists.txt  idf_component.yml  wifi_manager.c
components/wifi_manager/include/: wifi_manager.h
components/youtube_bili/: CMakeLists.txt  youtube_bili.c
components/youtube_bili/include/: youtube_bili.h
data/: config.json
data/images/: transJpg.py
data/images/themes/NotionRain/MutiInfo/WeekDate/week/: transJpgw.py
data/web/: index.html
main/: CMakeLists.txt  board_pins.h  fw_version.h.in  main.c
